added: render location table and add css helpers

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,15 @@
+
+/* HELPERS */
+
+.flex{
+    display: flex;
+}
+
+.justify-between{
+    justify-content: space-between;
+}
+
+/* BASICS */
 body {
     margin: 0;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
