--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,10 @@
-
 /* HELPERS */
 
-.flex{
+.flex {
     display: flex;
 }
 
-.justify-between{
+.justify-between {
     justify-content: space-between;
 }
 
@@ -18,30 +17,38 @@ body {
 header {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     align-items: center;
     background-color: antiquewhite;
     box-shadow: 0px 5px 14px 0px;
 
 }
 
+header>* {
+    margin-inline-start: 50px;
+
+}
+
 main {
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: column;
+    align-items: center;
+
 
 }
 
 nav {
-    width: 30%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    margin-inline-end: 50px;
+
+
 }
 
 .secondary-header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    box-shadow: 0px 2px 6px 0;
+    align-items: center;
+    padding-inline-end: 20px;
 }
 
 .curr-info {
@@ -56,24 +63,56 @@ nav {
     flex-direction: column;
     width: 45%;
     gap: 30px;
-    margin-inline-end: 40px;
+    /* margin-inline-end: 40px; */
 }
 
 #map {
-    margin-inline-end: 30px;
+
+    min-width: 300px;
     margin-top: 10px;
+    box-shadow: -5px 3px 14px 0px;
+    border-radius: 8px;
 }
 
 .box {
     background-color: rgb(202, 230, 221);
-    margin-top: 10px;
+    margin: 10px 0 10px 0;
     height: 180px;
+    min-width: 300px;
+    align-self: center;
+    border-radius: 10px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-align: center;
+    box-shadow: -5px 3px 14px 0px;
 
 }
 
 .btn {
     border-radius: 7px;
     font-family: fantasy;
+    max-height: 50px;
 }
 
 .type-search {}
+
+
+@media (min-width: 420px) {
+    #map {
+        min-width: 400px;
+        margin-top: 10px;
+    }
+}
+
+@media (min-width: 760px) {
+    main {
+        flex-direction: row-reverse;
+    }
+
+    #map {
+        margin-inline-end: 30px;
+    }
+
+    header {
+        justify-content: space-between;
+    }
+}
