--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,7 @@
 /* BASICS */
 body {
     margin: 0;
+    background-color: rgb(219, 254, 255);
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
@@ -38,9 +39,8 @@ main {
 
 nav {
     margin-inline-end: 50px;
-
-
 }
+
 
 .secondary-header {
     display: flex;
@@ -70,30 +70,52 @@ nav {
 
     min-width: 300px;
     margin-top: 10px;
-    box-shadow: -5px 3px 14px 0px;
-    border-radius: 8px;
+    border-radius: 6px;
 }
 
 .box {
     background-color: rgb(202, 230, 221);
     margin: 10px 0 10px 0;
-    height: 180px;
+    /* height: 180px; */
     min-width: 300px;
     align-self: center;
     border-radius: 10px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-align: center;
-    box-shadow: -5px 3px 14px 0px;
 
 }
 
 .btn {
     border-radius: 7px;
-    font-family: fantasy;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     max-height: 50px;
+    border: 0;
+    background-color: rgb(194, 193, 193);
+    padding: 6px;
+    cursor: pointer;
+    font-size: 1rem;
+
 }
 
-.type-search {}
+.btn:hover {
+    opacity: 0.8;
+}
+
+.place-list {
+    display: flex;
+    flex-direction: column;
+}
+
+.type-search {
+    border: 0;
+    border-radius: 8px;
+    height: 30px;
+    padding-inline-start: 10px;
+}
+
+.place-list>*:not(:last-child) {
+    border-bottom: 1px solid rgba(0, 0, 0, 0.138);
+}
 
 
 @media (min-width: 420px) {
